FIX:carousel responsiveness on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -123,12 +123,14 @@ footer a {
 
 /* home.html */
 #homecarousel {
-    height: 90vh;
+    height: 88vh;
 }
+
+.homedetailcontainer {}
 
 .homeimg {
     width: 100%;
-    height: 90vh;
+    height: 88vh;
     object-fit: cover;
 }
 
@@ -170,13 +172,13 @@ footer a {
 
 .roomdetailcontainer {
     height: 77vh;
+    border: var(--border);
 }
 
 .roomdetailimg {
     height: 77vh;
     width: 100%;
     object-fit: cover;
-    border: var(--border);
 }
 
 #detailscard {
@@ -290,17 +292,19 @@ footer a {
         margin: 10px 0;
     }
 
-    #roomdetailcarousel {
-        height: 80vh;
-        width: 100%;
+
+    .roomdetailcontainer {
+        border: none;
     }
 
     .roomdetailimg {
-        height: 80vh;
         width: 100%;
-        object-fit: cover;
-        border: none;
     }
+
+    #roomdetailcarousel {
+        width: 100%;
+    }
+
 
     #detailscard {
         font-size: large;
